fix(feature): Correct content inner spacing

--- a/assets/scss/_components/_feature.scss
+++ b/assets/scss/_components/_feature.scss
@@ -33,7 +33,7 @@
 
 	@include element(content) {
 		margin: 20px 0 0;
-		padding: 0 2px;
+		padding: 0;
 		letter-spacing: 0.05px;
 	}
 }
